Major changes:
2011/02/15: Add a static agite executable
2011/02/14: Fix dispatching of X Refresh event to multiple windows
            Add Get_Clock in Chronos, and remove Detach cause same as Attach (null)
2011/02/13: Add use anonymous access type in Limited_List
2011/02/12: Add make Timer_Id a smart reference
2011/02/11: Add new operations on Timers and add New_Id parameter to expiration callback
2011/02/10: Add improve error reported when parsing encoding map in Xml_Parser V26.1
2011/02/08: Add operation Set_Pi to Xml_Parser.Generator V9.0
2011/02/07: Add make Timer_Id tagged
            Chg remove Text_Handler
2011/02/06: Add fix size of X window in window manager
2011/02/04: Add make State_Machine OO
2011/02/02: Add support for http://<ip_address>
2011/02/01: Fix in http the decoding when server replies an error (no header)
2011/01/31: Add make Ada_Parser and Computer re-entrant
2011/01/28: Add Hosting in github
2011/01/21: Add Set_Null in As.U and Unbounded_Arrays and use them
2011/01/20: Fix many small fixes in select_file and initializations of chess, approx and day_of_week
2011/01/07: Fix remove "use" of As.U and As.B
            Fix use As.B instead of Text_Handler and restore original Text_Handler
2010/12/28: Fix unbounded Tail when no pad needed
2010/12/22: Add our own (tagged) version of unbounded and bounded strings
2010/12/19: Add Move to first/last significant char on Ctrl-Left/Right in Afpx.Put_Then_Get
2010/12/16: Fix remove fixed-length strings from Reposit and make Text_Handler.Text tagged
2010/11/19: Add default background color in Con_Io and Afpx and change default to the "grey" scheme
            Fix font loading
2010/11/14: Add support of 4 digits in renardeau computation and result
2010/11/12: Fix dummy signal didn't wake up the wait
2010/11/11: Add replace Unique_List by Hashed_List.Unique, more efficient
2010/11/08: Add search of anagrams in xwords
2010/11/06: Add Hashing on larger keys and optimizations